--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,7 +23,7 @@
 				</li>
 				<% } else { %>
 				<li>
-					<a id="navbar_text" href="/favs">Your Commutes</a>
+					<a id="navbar_text" href="/trips">Your Commutes</a>
 				</li>
 				<li>
 					<a id="navbar_text" href="/auth/logout">Logout</a>
