--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,10 +19,14 @@
 		<select name="mode">
 		  <option value="" selected="selected">Select a Transport Mode</option>
 		  <option value="bicycling">Cycling</option>
-		  <option value="driving">Driving</option>
-		  <option value="transit">Public Transit</option>
 		  <option value="walking">Walking</option>
+		  <option value="driving">Driving</option>
+		  <option value="motorcycle">Motorcycle</option>
+		  <option value="transitrail">Transit Rail</option>
+		  <option value="bus">Bus</option>
 		</select>
 	</div>
 	<input type="submit" value="Submit" class="btn btn-success">
 </form>
+
+
