--- a/views/modes.ejs
+++ b/views/modes.ejs
@@ -6,7 +6,7 @@
 			<div><h3>Destination: <%=map.destination_addresses%></h3></div>
 			<div><h3>Mode of Travel: <%=modecurrent%></h3></div>
 			<div><h3>Estimated Travel Time: <%=map.rows[0].elements[0].duration.text%></h3></div>
-			<div><h3>Distance: <%=Math.round(map.rows[0].elements[0].distance.value /1000 * 0.621371)%> miles</h3></div>
+			<div><h3>Distance: <%=(map.rows[0].elements[0].distance.value /1000 * 0.621371).toFixed(2)%> miles</h3></div>
 			<div>
 				<%var distance = map.rows[0].elements[0].distance.value / 1000 * 0.621371%>
 				<%console.log("distannnnnnce", distance)%>
@@ -17,16 +17,16 @@
 					<%var carbon = distance * 0 %>
 					<h3>Carbon: <%=carbon%></h3></div>
 				<% } else if(modecurrent === "driving") { %>
-					<%var carbon = Math.round(distance * 0.355) %>
+					<%var carbon = (distance * 0.355).toFixed(2) %>
 					<h3>Carbon: <%=carbon%> kg of CO<sub>2</sub></h3></div>
 				<% } else if(modecurrent === "bus") { %>
-					<%var carbon = Math.round(distance * 0.055) %>
+					<%var carbon = (distance * 0.055).toFixed(2) %>
 					<h3>Carbon: <%=carbon%> kg of CO<sub>2</sub></h3></div>
 				<% } else if(modecurrent === "transitrail") { %>
-					<%var carbon = Math.round(distance * 0.120) %>
+					<%var carbon = (distance * 0.120).toFixed(2) %>
 					<h3>Carbon: <%=carbon %> kg of CO<sub>2</sub></h3></div>
 				<% } else if(modecurrent === "motorcycle") { %>
-					<%var carbon = Math.round(distance * 0.191) %>
+					<%var carbon = (distance * 0.191).toFixed(2) %>
 					<h3>Carbon: <%=carbon%> kg of CO<sub>2</sub></h3></div>
 				<% } %>
 			</div>
