renderng modes db info in ejs table

--- a/views/modes.ejs
+++ b/views/modes.ejs
@@ -38,7 +38,7 @@
          			<input hidden type="text" name="carbon" value="<%= carbon%>">
           			<button id="save_button" type="submit">Add to Trips</button>
           		<% } else { %>
-          			<button id="save_button" type="submit">Login to add to Wishlist</button>
+          			<button id="save_button" type="submit">Login to add to Trips</button>
 				<% } %>
     		</form>
 	</div>
