--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,192 +6,199 @@
 	</div>
 </div>
 
-<form method="post" action="/modes">
-	<div>
-		<select name="mode">
-		  <option value="" selected="selected">Select a Transport Mode</option>
-		  <option value="bicycling">Cycling</option>
-		  <option value="walking">Walking</option>
-		  <option value="driving">Driving</option>
-		  <option value="motorcycle">Motorcycle</option>
-		  <option value="transitrail">Transit Rail</option>
-		  <option value="bus">Bus</option>
-		</select>
-	</div>
-	<div class="control-group">
-        <label class="control-label">Street Address</label>
-        <div class="controls">
-            <input id="address-line1" name="addStart" type="text" placeholder="address line 1"
-            class="input-xlarge">
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label">City / Town</label>
-        <div class="controls">
-            <input id="city" name="cityStart" type="text" placeholder="city" class="input-xlarge">
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label">State / Province / Region</label>
-        <div class="controls">
-           <select id="region" name="regStart" type="text" placeholder="state / province"
-            class="input-xlarge">
-                <option value="" selected="selected">Select a State</option>
-				<option value="AL">Alabama</option>
-				<option value="AK">Alaska</option>
-				<option value="AZ">Arizona</option>
-				<option value="AR">Arkansas</option>
-				<option value="CA">California</option>
-				<option value="CO">Colorado</option>
-				<option value="CT">Connecticut</option>
-				<option value="DE">Delaware</option>
-				<option value="DC">District Of Columbia</option>
-				<option value="FL">Florida</option>
-				<option value="GA">Georgia</option>
-				<option value="HI">Hawaii</option>
-				<option value="ID">Idaho</option>
-				<option value="IL">Illinois</option>
-				<option value="IN">Indiana</option>
-				<option value="IA">Iowa</option>
-				<option value="KS">Kansas</option>
-				<option value="KY">Kentucky</option>
-				<option value="LA">Louisiana</option>
-				<option value="ME">Maine</option>
-				<option value="MD">Maryland</option>
-				<option value="MA">Massachusetts</option>
-				<option value="MI">Michigan</option>
-				<option value="MN">Minnesota</option>
-				<option value="MS">Mississippi</option>
-				<option value="MO">Missouri</option>
-				<option value="MT">Montana</option>
-				<option value="NE">Nebraska</option>
-				<option value="NV">Nevada</option>
-				<option value="NH">New Hampshire</option>
-				<option value="NJ">New Jersey</option>
-				<option value="NM">New Mexico</option>
-				<option value="NY">New York</option>
-				<option value="NC">North Carolina</option>
-				<option value="ND">North Dakota</option>
-				<option value="OH">Ohio</option>
-				<option value="OK">Oklahoma</option>
-				<option value="OR">Oregon</option>
-				<option value="PA">Pennsylvania</option>
-				<option value="RI">Rhode Island</option>
-				<option value="SC">South Carolina</option>
-				<option value="SD">South Dakota</option>
-				<option value="TN">Tennessee</option>
-				<option value="TX">Texas</option>
-				<option value="UT">Utah</option>
-				<option value="VT">Vermont</option>
-				<option value="VA">Virginia</option>
-				<option value="WA">Washington</option>
-				<option value="WV">West Virginia</option>
-				<option value="WI">Wisconsin</option>
-				<option value="WY">Wyoming</option>
-				<option value="AB">Alberta</option>
-				<option value="BC">British Columbia</option>
-				<option value="MB">Manitoba</option>
-				<option value="NB">New Brunswick</option>
-				<option value="NL">Newfoundland and Labrador</option>
-				<option value="NT">Northwest Territories</option>
-				<option value="NU">Nunavut</option>
-				<option value="ON">Ontario</option>
-				<option value="PE">Prince Edward Island</option>
-				<option value="QC">Quebec</option>
-				<option value="SK">Saskatchewan</option>
-				<option value="SK">Saskatchewan</option>
-			</select>
-        </div>
-    </div>
-	<div class="control-group">
-        <label class="control-label">Street Address</label>
-        <div class="controls">
-            <input id="address-line1" name="addEnd" type="text" placeholder="address line 1"
-            class="input-xlarge">
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label">City / Town</label>
-        <div class="controls">
-            <input id="city" name="cityEnd" type="text" placeholder="city" class="input-xlarge">
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label">State / Province / Region</label>
-        <div class="controls">
-           <select id="region" name="regEnd" type="text" placeholder="state / province"
-            class="input-xlarge">
-                <option value="" selected="selected">Select a State</option>
-				<option value="AL">Alabama</option>
-				<option value="AK">Alaska</option>
-				<option value="AZ">Arizona</option>
-				<option value="AR">Arkansas</option>
-				<option value="CA">California</option>
-				<option value="CO">Colorado</option>
-				<option value="CT">Connecticut</option>
-				<option value="DE">Delaware</option>
-				<option value="DC">District Of Columbia</option>
-				<option value="FL">Florida</option>
-				<option value="GA">Georgia</option>
-				<option value="HI">Hawaii</option>
-				<option value="ID">Idaho</option>
-				<option value="IL">Illinois</option>
-				<option value="IN">Indiana</option>
-				<option value="IA">Iowa</option>
-				<option value="KS">Kansas</option>
-				<option value="KY">Kentucky</option>
-				<option value="LA">Louisiana</option>
-				<option value="ME">Maine</option>
-				<option value="MD">Maryland</option>
-				<option value="MA">Massachusetts</option>
-				<option value="MI">Michigan</option>
-				<option value="MN">Minnesota</option>
-				<option value="MS">Mississippi</option>
-				<option value="MO">Missouri</option>
-				<option value="MT">Montana</option>
-				<option value="NE">Nebraska</option>
-				<option value="NV">Nevada</option>
-				<option value="NH">New Hampshire</option>
-				<option value="NJ">New Jersey</option>
-				<option value="NM">New Mexico</option>
-				<option value="NY">New York</option>
-				<option value="NC">North Carolina</option>
-				<option value="ND">North Dakota</option>
-				<option value="OH">Ohio</option>
-				<option value="OK">Oklahoma</option>
-				<option value="OR">Oregon</option>
-				<option value="PA">Pennsylvania</option>
-				<option value="RI">Rhode Island</option>
-				<option value="SC">South Carolina</option>
-				<option value="SD">South Dakota</option>
-				<option value="TN">Tennessee</option>
-				<option value="TX">Texas</option>
-				<option value="UT">Utah</option>
-				<option value="VT">Vermont</option>
-				<option value="VA">Virginia</option>
-				<option value="WA">Washington</option>
-				<option value="WV">West Virginia</option>
-				<option value="WI">Wisconsin</option>
-				<option value="WY">Wyoming</option>
-				<option value="AB">Alberta</option>
-				<option value="BC">British Columbia</option>
-				<option value="MB">Manitoba</option>
-				<option value="NB">New Brunswick</option>
-				<option value="NL">Newfoundland and Labrador</option>
-				<option value="NT">Northwest Territories</option>
-				<option value="NU">Nunavut</option>
-				<option value="ON">Ontario</option>
-				<option value="PE">Prince Edward Island</option>
-				<option value="QC">Quebec</option>
-				<option value="SK">Saskatchewan</option>
-				<option value="SK">Saskatchewan</option>
-			</select>
-        </div>
-    </div>
+<div class="row form-group">
+	<div class="col-md-6">
+		<form method="post" action="/modes">
+			<h3>Mode of Transportation?</h3>
+			<div class="form-group">
+				<select name="mode">
+				  <option value="" selected="selected">Select</option>
+				  <option value="bicycling">Cycling</option>
+				  <option value="walking">Walking</option>
+				  <option value="driving">Driving</option>
+				  <option value="motorcycle">Motorcycle</option>
+				  <option value="transitrail">Transit Rail</option>
+				  <option value="bus">Bus</option>
+				</select>
+			</div>
+			<h3>Starting Point</h3>
+			<div class="form-group">
+		        <label class="control-label">Street Address</label>
+		        <div class="controls">
+		            <input id="address-line1" name="addStart" type="text" placeholder="address line 1"
+		            class="form-control">
+		        </div>
+		    </div>
+		    <div class="form-group">
+		        <label class="control-label">City / Town</label>
+		        <div class="controls">
+		            <input id="city" name="cityStart" type="text" placeholder="city" class="form-control">
+		        </div>
+		    </div>
+		    <div class="form-group">
+		        <label class="control-label">State / Province / Region</label>
+		        <div class="controls">
+		           <select id="region" name="regStart" type="text" placeholder="state / province"
+		            class="form-control">
+		                <option value="" selected="selected">Select a State</option>
+						<option value="AL">Alabama</option>
+						<option value="AK">Alaska</option>
+						<option value="AZ">Arizona</option>
+						<option value="AR">Arkansas</option>
+						<option value="CA">California</option>
+						<option value="CO">Colorado</option>
+						<option value="CT">Connecticut</option>
+						<option value="DE">Delaware</option>
+						<option value="DC">District Of Columbia</option>
+						<option value="FL">Florida</option>
+						<option value="GA">Georgia</option>
+						<option value="HI">Hawaii</option>
+						<option value="ID">Idaho</option>
+						<option value="IL">Illinois</option>
+						<option value="IN">Indiana</option>
+						<option value="IA">Iowa</option>
+						<option value="KS">Kansas</option>
+						<option value="KY">Kentucky</option>
+						<option value="LA">Louisiana</option>
+						<option value="ME">Maine</option>
+						<option value="MD">Maryland</option>
+						<option value="MA">Massachusetts</option>
+						<option value="MI">Michigan</option>
+						<option value="MN">Minnesota</option>
+						<option value="MS">Mississippi</option>
+						<option value="MO">Missouri</option>
+						<option value="MT">Montana</option>
+						<option value="NE">Nebraska</option>
+						<option value="NV">Nevada</option>
+						<option value="NH">New Hampshire</option>
+						<option value="NJ">New Jersey</option>
+						<option value="NM">New Mexico</option>
+						<option value="NY">New York</option>
+						<option value="NC">North Carolina</option>
+						<option value="ND">North Dakota</option>
+						<option value="OH">Ohio</option>
+						<option value="OK">Oklahoma</option>
+						<option value="OR">Oregon</option>
+						<option value="PA">Pennsylvania</option>
+						<option value="RI">Rhode Island</option>
+						<option value="SC">South Carolina</option>
+						<option value="SD">South Dakota</option>
+						<option value="TN">Tennessee</option>
+						<option value="TX">Texas</option>
+						<option value="UT">Utah</option>
+						<option value="VT">Vermont</option>
+						<option value="VA">Virginia</option>
+						<option value="WA">Washington</option>
+						<option value="WV">West Virginia</option>
+						<option value="WI">Wisconsin</option>
+						<option value="WY">Wyoming</option>
+						<option value="AB">Alberta</option>
+						<option value="BC">British Columbia</option>
+						<option value="MB">Manitoba</option>
+						<option value="NB">New Brunswick</option>
+						<option value="NL">Newfoundland and Labrador</option>
+						<option value="NT">Northwest Territories</option>
+						<option value="NU">Nunavut</option>
+						<option value="ON">Ontario</option>
+						<option value="PE">Prince Edward Island</option>
+						<option value="QC">Quebec</option>
+						<option value="SK">Saskatchewan</option>
+						<option value="SK">Saskatchewan</option>
+					</select>
+		        </div>
+		    </div>
+		    <h3>Destination</h3>
+			<div class="form-group">
+		        <label class="control-label">Street Address</label>
+		        <div class="controls">
+		            <input id="address-line1" name="addEnd" type="text" placeholder="address line 1"
+		            class="form-control">
+		        </div>
+		    </div>
+		    <div class="form-group">
+		        <label class="control-label">City / Town</label>
+		        <div class="controls">
+		            <input id="city" name="cityEnd" type="text" placeholder="city" class="form-control">
+		        </div>
+		    </div>
+		    <div class="form-group">
+		        <label class="control-label">State / Province / Region</label>
+		        <div class="controls">
+		           <select id="region" name="regEnd" type="text" placeholder="state / province"
+		            class="form-control">
+		                <option value="" selected="selected">Select a State</option>
+						<option value="AL">Alabama</option>
+						<option value="AK">Alaska</option>
+						<option value="AZ">Arizona</option>
+						<option value="AR">Arkansas</option>
+						<option value="CA">California</option>
+						<option value="CO">Colorado</option>
+						<option value="CT">Connecticut</option>
+						<option value="DE">Delaware</option>
+						<option value="DC">District Of Columbia</option>
+						<option value="FL">Florida</option>
+						<option value="GA">Georgia</option>
+						<option value="HI">Hawaii</option>
+						<option value="ID">Idaho</option>
+						<option value="IL">Illinois</option>
+						<option value="IN">Indiana</option>
+						<option value="IA">Iowa</option>
+						<option value="KS">Kansas</option>
+						<option value="KY">Kentucky</option>
+						<option value="LA">Louisiana</option>
+						<option value="ME">Maine</option>
+						<option value="MD">Maryland</option>
+						<option value="MA">Massachusetts</option>
+						<option value="MI">Michigan</option>
+						<option value="MN">Minnesota</option>
+						<option value="MS">Mississippi</option>
+						<option value="MO">Missouri</option>
+						<option value="MT">Montana</option>
+						<option value="NE">Nebraska</option>
+						<option value="NV">Nevada</option>
+						<option value="NH">New Hampshire</option>
+						<option value="NJ">New Jersey</option>
+						<option value="NM">New Mexico</option>
+						<option value="NY">New York</option>
+						<option value="NC">North Carolina</option>
+						<option value="ND">North Dakota</option>
+						<option value="OH">Ohio</option>
+						<option value="OK">Oklahoma</option>
+						<option value="OR">Oregon</option>
+						<option value="PA">Pennsylvania</option>
+						<option value="RI">Rhode Island</option>
+						<option value="SC">South Carolina</option>
+						<option value="SD">South Dakota</option>
+						<option value="TN">Tennessee</option>
+						<option value="TX">Texas</option>
+						<option value="UT">Utah</option>
+						<option value="VT">Vermont</option>
+						<option value="VA">Virginia</option>
+						<option value="WA">Washington</option>
+						<option value="WV">West Virginia</option>
+						<option value="WI">Wisconsin</option>
+						<option value="WY">Wyoming</option>
+						<option value="AB">Alberta</option>
+						<option value="BC">British Columbia</option>
+						<option value="MB">Manitoba</option>
+						<option value="NB">New Brunswick</option>
+						<option value="NL">Newfoundland and Labrador</option>
+						<option value="NT">Northwest Territories</option>
+						<option value="NU">Nunavut</option>
+						<option value="ON">Ontario</option>
+						<option value="PE">Prince Edward Island</option>
+						<option value="QC">Quebec</option>
+						<option value="SK">Saskatchewan</option>
+						<option value="SK">Saskatchewan</option>
+					</select>
+		        </div>
+		    </div>
 
-	
-	<input type="submit" value="Submit" class="btn btn-success">
-</form>
+			
+			<input type="submit" value="Submit" class="btn btn-success">
+		</form>
+</div>
+</div>
 
 
 				
