--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,10 +15,10 @@
 	<%- body %>
 		
 
-<script src="js/script.js"></script>
+<script src="js/chart.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="/routing.js"></script>
+<script src="js/routing.js"></script>
 
 </body>
 <% include partials/footer%>
