test chart rendering

--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -27,6 +27,11 @@
 	</tbody>
 </table>
 
+<canvas id="myChart"></canvas>
+
+<script type="text/javascript"> var chartData = <%-JSON.stringify(user)%></script>
+<script type="text/javascript" src="js/chart.js"></script>
+
 
 
 			
