--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
-#navbar_text{
+/*navbar
+*/#navbar_text{
 	color: rgb(50,50,50);
 	font-family: 'Raleway', sans-serif;
 	font-size: 22px;
@@ -9,6 +10,12 @@
 .navbar{
 	background-color: white;
 	height: 42px;
+}
+/*charts
+*/
+#mychart{
+	height: 200px;
+	width: 200px;
 }
 /*//footer// 
 */
