--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -17,7 +17,7 @@
 	<tbody>
 		<%user.modes.map(function(trip) {%>
 		<tr>
-			<td><%=trip.createdAt%></td>
+			<td><%=trip.date%></td>
 			<td><%=trip.mode%></td>
 			<td><%=trip.distance%></td>
 			<td><%=trip.carbon%></td>
