working on area chart for carbon figures

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,8 +19,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
-<script src="js/chart.js"></script>
+<script src="js/dough_chart.js"></script>
 <script src="js/routing.js"></script>
+<script src="js/area_chart.js"></script>
+
 
 </body>
 <% include partials/footer%>
