--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -4,6 +4,8 @@
 <% if(user.modes.length <= 0) {%>
 	<h2> You haven't added any trips yet</h2>
 <%}%>
+<canvas id="area_chart"></canvas>
+
 <table class="table">
 	<thead>
 		<tr>
@@ -27,10 +29,12 @@
 	</tbody>
 </table>
 
-<canvas id="myChart"></canvas>
+<canvas id="dough_chart"></canvas>
+
 
 <script type="text/javascript"> var chartData = <%-JSON.stringify(user)%></script>
-<script type="text/javascript" src="js/chart.js"></script>
+<script type="text/javascript" src="js/dough_chart.js"></script>
+<script type="text/javascript" src="js/area_chart.js"></script>
 
 
 
