homepage bar chart built out

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,8 @@
 <script src="js/dough_chart.js"></script>
 <script src="js/routing.js"></script>
 <script src="js/area_chart.js"></script>
+<script src="js/average_chart.js"></script>
+
 
 
 </body>
