--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,10 +7,10 @@
 </div>
 
 <div class="row form-group">
-	<div class="col-md-6">
+	<div class="col-md-4 col-md-offset-1">
 		<form method="post" action="/modes">
-			<h3>Mode of Transportation?</h3>
 			<div class="form-group">
+			<label class="control-label">Mode of Transport</label>
 				<select name="mode" required>
 				  <option value="" selected="selected">Select</option>
 				  <option value="bicycling">Cycling</option>
@@ -202,7 +202,13 @@
 			<input type="submit" value="Submit" class="btn btn-success">
 		</form>
 </div>
+<div class="col-md-4 col-md-offset-1">
+	<canvas id="avgChart" width="400" height="400"></canvas>
 </div>
+</div>
+
+<script src="js/average_chart.js"></script>
+
 
 
 				
