--- a/views/modes.ejs
+++ b/views/modes.ejs
@@ -10,12 +10,14 @@
 			<div><h3>Distance: <%=(map.rows[0].elements[0].distance.value /1000 * 0.621371).toFixed(2)%> miles</h3></div>
 			<div>
 				<%var distance = (map.rows[0].elements[0].distance.value / 1000 * 0.621371).toFixed(2)%>
-				<%console.log("distannnnnnce", distance)%>
 				<%if(modecurrent === "bicycling") { %>
 					<%var carbon = distance * 0 %>
 					<h3>Carbon: <%=carbon%></h3></div>
 				<% } else if(modecurrent === "walking") { %>
-					<%var carbon = distance * 0 %>
+					<%var carbon = distance * 0%>
+					<h3>Carbon: <%=carbon%></h3></div>
+				<% } else if(modecurrent === "truck") { %>
+					<%var carbon = (distance * 0.485).toFixed(2) %>
 					<h3>Carbon: <%=carbon%></h3></div>
 				<% } else if(modecurrent === "driving") { %>
 					<%var carbon = (distance * 0.355).toFixed(2) %>
@@ -29,6 +31,7 @@
 				<% } else if(modecurrent === "motorcycle") { %>
 					<%var carbon = (distance * 0.191).toFixed(2) %>
 					<h3>Carbon: <%=carbon%> kg of CO<sub>2</sub></h3></div>
+					<%console.log("caaaarbon", carbon)%>
 				<% } %>
 			</div>
 			<form method="POST" action="/trips">
