initial styling and homepage animations

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,9 @@
 	<title>Carbon Commute</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+	<link href="https://fonts.googleapis.com/css?family=Poppins|Raleway" rel="stylesheet">
+	<link rel="stylesheet" href="animate.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
@@ -23,6 +25,8 @@
 <script src="js/routing.js"></script>
 <script src="js/area_chart.js"></script>
 <script src="js/average_chart.js"></script>
+<script src="js/script.js"></script>
+
 
 
 
