--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,25 @@
 	background-color: white;
 	height: 42px;
 }
+#logo{
+	height: 40px;
+	position: relative;
+	top: -10px;
+	width: auto;
+}
+/*page format
+*/.background{
+	background-image: url("/images/back.jpg");
+	background-size: cover;
+	height: 100%;
+	margin-top: -20px;
+}
+.top-row{
+	margin-top: 60px;
+}
+.info_text{
+	font-size: 18px;
+}
 /*charts
 */
 canvas{
@@ -19,6 +38,26 @@ canvas{
 }
 /*//footer// 
 */
+h1{
+	font-family: 'Poppins', sans-serif;
+	font-size: 78px;
+	color: white;
+}
+p{
+	font-family: 'Raleway', sans-serif;
+}
+
+#search_form{
+	display: none;
+}
+#search_button{
+	margin: 5px auto;
+	font-size: 30px;
+}
+#button_div{
+	text-align: center;
+}
+
 .clearfix:after {
 	visibility: hidden;
 	display: block;
