--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,32 +1,49 @@
-<div>
+<div class="background">
 	<div class="text-center row form-group">
 		<div class="col-md-12">
 			<h1>Carbon Commute</h1>
+			<h3>Track Your Trips. See Your Carbon Footprint</h3>
 		</div>
 	</div>
 </div>
-
-<div class="row form-group">
+<div class="row form-group top-row">
+	<div class="col-md-5 col-md-offset-1">
+	<h3>Track a Trip</h3>
+	<div class="info_text"><p>Carbon Commute lets you see average carbon dioxide emissions per trip traveled based on mode of transport. Simply select transportation mode and trip origin and destination points. Save your trips to track distance and carbon footprint data to date</p></div>
+	<div id="button_div"><input id="search_button" type="button" value="Start Tracking" class="btn" onclick="showForm()"></div>	
+	</div>
 	<div class="col-md-4 col-md-offset-1">
-		<form method="post" action="/modes">
+		<h3>Understand your impact</h3>
+		<p></p>
+	</div>
+</div>
+<div class="row form-group">
+	<div class="col-md-5 col-md-offset-1">
+		<form method="post" action="/modes" class="animated fadeInUp" id="search_form">
 			<div class="form-group">
-			<label class="control-label">Mode of Transport</label>
-				<select name="mode" required>
-				  <option value="" selected="selected">Select</option>
-				  <option value="bicycling">Cycling</option>
-				  <option value="walking">Walking</option>
-				  <option value="driving">Driving</option>
-				  <option value="truck">Light-Duty Truck</option>
-				  <option value="motorcycle">Motorcycle</option>
-				  <option value="transitrail">Transit Rail</option>
-				  <option value="bus">Bus</option>
-				</select>
+			<p>Select a travel mode and start and end points to track  your miles and carbon footprint</p>
+			<div class="row form-group">
+				<div class="col-md-6">
+				<label class="control-label">Mode of Transport</label>
+					<select name="mode" class="form-control" required>
+					  <option value="" selected="selected">Select</option>
+					  <option value="bicycling">Cycling</option>
+					  <option value="walking">Walking</option>
+					  <option value="driving">Driving</option>
+					  <option value="truck">Light-Duty Truck</option>
+					  <option value="motorcycle">Motorcycle</option>
+					  <option value="transitrail">Transit Rail</option>
+					  <option value="bus">Bus</option>
+					</select>
+				</div>
+			<div class="col-md-6">
+				<div class="form-group">
+					<label class="control-label">Commute Date</label>
+					<input id="date" name="date" type="date" class="form-control" required>
+				</div>
 			</div>
-			<div class="form-group">
-				<label class="control-label">Commute Date</label>
-				<input id="date" name="date" type="date" class="form-control" required>
 			</div>
-			<h3>Starting Point</h3>
+			<h4>Starting Point</h4>
 			<div class="form-group">
 		        <label class="control-label">Street Address</label>
 		        <div class="controls">
@@ -34,85 +51,91 @@
 		            class="form-control" required>
 		        </div>
 		    </div>
-		    <div class="form-group">
-		        <label class="control-label">City / Town</label>
-		        <div class="controls">
-		            <input id="city" name="cityStart" type="text" placeholder="city" class="form-control" required>
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="control-label">State / Province / Region</label>
-		        <div class="controls">
-		           <select id="region" name="regStart" type="text" placeholder="state / province"
-		            class="form-control" required>
-		                <option value="" selected="selected">Select a State</option>
-						<option value="AL">Alabama</option>
-						<option value="AK">Alaska</option>
-						<option value="AZ">Arizona</option>
-						<option value="AR">Arkansas</option>
-						<option value="CA">California</option>
-						<option value="CO">Colorado</option>
-						<option value="CT">Connecticut</option>
-						<option value="DE">Delaware</option>
-						<option value="DC">District Of Columbia</option>
-						<option value="FL">Florida</option>
-						<option value="GA">Georgia</option>
-						<option value="HI">Hawaii</option>
-						<option value="ID">Idaho</option>
-						<option value="IL">Illinois</option>
-						<option value="IN">Indiana</option>
-						<option value="IA">Iowa</option>
-						<option value="KS">Kansas</option>
-						<option value="KY">Kentucky</option>
-						<option value="LA">Louisiana</option>
-						<option value="ME">Maine</option>
-						<option value="MD">Maryland</option>
-						<option value="MA">Massachusetts</option>
-						<option value="MI">Michigan</option>
-						<option value="MN">Minnesota</option>
-						<option value="MS">Mississippi</option>
-						<option value="MO">Missouri</option>
-						<option value="MT">Montana</option>
-						<option value="NE">Nebraska</option>
-						<option value="NV">Nevada</option>
-						<option value="NH">New Hampshire</option>
-						<option value="NJ">New Jersey</option>
-						<option value="NM">New Mexico</option>
-						<option value="NY">New York</option>
-						<option value="NC">North Carolina</option>
-						<option value="ND">North Dakota</option>
-						<option value="OH">Ohio</option>
-						<option value="OK">Oklahoma</option>
-						<option value="OR">Oregon</option>
-						<option value="PA">Pennsylvania</option>
-						<option value="RI">Rhode Island</option>
-						<option value="SC">South Carolina</option>
-						<option value="SD">South Dakota</option>
-						<option value="TN">Tennessee</option>
-						<option value="TX">Texas</option>
-						<option value="UT">Utah</option>
-						<option value="VT">Vermont</option>
-						<option value="VA">Virginia</option>
-						<option value="WA">Washington</option>
-						<option value="WV">West Virginia</option>
-						<option value="WI">Wisconsin</option>
-						<option value="WY">Wyoming</option>
-						<option value="AB">Alberta</option>
-						<option value="BC">British Columbia</option>
-						<option value="MB">Manitoba</option>
-						<option value="NB">New Brunswick</option>
-						<option value="NL">Newfoundland and Labrador</option>
-						<option value="NT">Northwest Territories</option>
-						<option value="NU">Nunavut</option>
-						<option value="ON">Ontario</option>
-						<option value="PE">Prince Edward Island</option>
-						<option value="QC">Quebec</option>
-						<option value="SK">Saskatchewan</option>
-						<option value="SK">Saskatchewan</option>
-					</select>
-		        </div>
-		    </div>
-		    <h3>Destination</h3>
+		    <div class="row form-group">
+				<div class="col-md-6">
+		    		<div class="form-group">
+			        	<label class="control-label">City / Town</label>
+			       		<div class="controls">
+			            	<input id="city" name="cityStart" type="text" placeholder="city" class="form-control" required>
+			        	</div>
+		    		</div>
+		    	</div>
+		    	<div class="col-md-6">
+			    <div class="form-group">
+			        <label class="control-label">State / Province / Region</label>
+			        <div class="controls">
+			           <select id="region" name="regStart" type="text" placeholder="state / province"
+			            class="form-control" required>
+			                <option value="" selected="selected">Select a State</option>
+							<option value="AL">Alabama</option>
+							<option value="AK">Alaska</option>
+							<option value="AZ">Arizona</option>
+							<option value="AR">Arkansas</option>
+							<option value="CA">California</option>
+							<option value="CO">Colorado</option>
+							<option value="CT">Connecticut</option>
+							<option value="DE">Delaware</option>
+							<option value="DC">District Of Columbia</option>
+							<option value="FL">Florida</option>
+							<option value="GA">Georgia</option>
+							<option value="HI">Hawaii</option>
+							<option value="ID">Idaho</option>
+							<option value="IL">Illinois</option>
+							<option value="IN">Indiana</option>
+							<option value="IA">Iowa</option>
+							<option value="KS">Kansas</option>
+							<option value="KY">Kentucky</option>
+							<option value="LA">Louisiana</option>
+							<option value="ME">Maine</option>
+							<option value="MD">Maryland</option>
+							<option value="MA">Massachusetts</option>
+							<option value="MI">Michigan</option>
+							<option value="MN">Minnesota</option>
+							<option value="MS">Mississippi</option>
+							<option value="MO">Missouri</option>
+							<option value="MT">Montana</option>
+							<option value="NE">Nebraska</option>
+							<option value="NV">Nevada</option>
+							<option value="NH">New Hampshire</option>
+							<option value="NJ">New Jersey</option>
+							<option value="NM">New Mexico</option>
+							<option value="NY">New York</option>
+							<option value="NC">North Carolina</option>
+							<option value="ND">North Dakota</option>
+							<option value="OH">Ohio</option>
+							<option value="OK">Oklahoma</option>
+							<option value="OR">Oregon</option>
+							<option value="PA">Pennsylvania</option>
+							<option value="RI">Rhode Island</option>
+							<option value="SC">South Carolina</option>
+							<option value="SD">South Dakota</option>
+							<option value="TN">Tennessee</option>
+							<option value="TX">Texas</option>
+							<option value="UT">Utah</option>
+							<option value="VT">Vermont</option>
+							<option value="VA">Virginia</option>
+							<option value="WA">Washington</option>
+							<option value="WV">West Virginia</option>
+							<option value="WI">Wisconsin</option>
+							<option value="WY">Wyoming</option>
+							<option value="AB">Alberta</option>
+							<option value="BC">British Columbia</option>
+							<option value="MB">Manitoba</option>
+							<option value="NB">New Brunswick</option>
+							<option value="NL">Newfoundland and Labrador</option>
+							<option value="NT">Northwest Territories</option>
+							<option value="NU">Nunavut</option>
+							<option value="ON">Ontario</option>
+							<option value="PE">Prince Edward Island</option>
+							<option value="QC">Quebec</option>
+							<option value="SK">Saskatchewan</option>
+							<option value="SK">Saskatchewan</option>
+						</select>
+			        </div>
+			    </div>
+				</div>
+			</div>
+		    <h4>Destination</h4>
 			<div class="form-group">
 		        <label class="control-label">Street Address</label>
 		        <div class="controls">
@@ -120,12 +143,16 @@
 		            class="form-control" required>
 		        </div>
 		    </div>
-		    <div class="form-group">
-		        <label class="control-label">City / Town</label>
-		        <div class="controls">
-		            <input id="city" name="cityEnd" type="text" placeholder="city" class="form-control" required>
-		        </div>
-		    </div>
+		   	<div class="row form-group">
+			   	<div class="col-md-6">
+			    <div class="form-group">
+			        <label class="control-label">City / Town</label>
+			        <div class="controls">
+			            <input id="city" name="cityEnd" type="text" placeholder="city" class="form-control" required>
+			        </div>
+			    </div>
+			</div>
+			<div class="col-md-6">
 		    <div class="form-group">
 		        <label class="control-label">State / Province / Region</label>
 		        <div class="controls">
@@ -198,16 +225,24 @@
 					</select>
 		        </div>
 		    </div>
-
-			<input type="submit" value="Submit" class="btn btn-success">
+			</div>
+		</div>
+			<input type="submit" value="Submit" class="btn">
 		</form>
+	</div>
 </div>
 <div class="col-md-4 col-md-offset-1">
 	<canvas id="avgChart" width="400" height="400"></canvas>
 </div>
 </div>
 
+<div id="search_result">
+
+</div>
+
 <script src="js/average_chart.js"></script>
+<script src="js/script.js"></script>
+
 
 
 
