--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/"><img class="logo" alt="icon" src="#"></a>
+			<a class="navbar-brand" href="/"><img id="logo" alt="icon" src="/images/icon.png"></a>
 		</div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
