--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,9 +12,9 @@
 	<div class="info_text"><p>Carbon Commute lets you see average carbon dioxide emissions per trip traveled based on mode of transport. Simply select transportation mode and trip origin and destination points. Save your trips to track distance and carbon footprint data to date</p></div>
 	<div id="button_div"><input id="search_button" type="button" value="Start Tracking" class="btn" onclick="showForm()"></div>	
 	</div>
-	<div class="col-md-4 col-md-offset-1">
+	<div class="col-md-5">
 		<h3>Understand your impact</h3>
-		<p></p>
+		<div class="info_text"><p>Burning fossil fues via combustion produces CO<sub>2</sub>, one of the primary greenhouse gases that contributes to the "Greenhouse Effect". Data below from the Environmental Protection Agency provides a snapshot of CO<sub>2</sub> emissions per mile based on mode of transportation. </p></div>
 	</div>
 </div>
 <div class="row form-group">
@@ -231,7 +231,7 @@
 		</form>
 	</div>
 </div>
-<div class="col-md-4 col-md-offset-1">
+<div class="col-md-5">
 	<canvas id="avgChart" width="400" height="400"></canvas>
 </div>
 </div>
