--- a/views/modes.ejs
+++ b/views/modes.ejs
@@ -10,9 +10,9 @@
 	<div class="col-md-5 col-md-offset-1">
 	<h3>Trip Stats</h3>		
 	</div>
-	<div class="col-md-4 col-md-offset-1">
+	<div class="col-md-5">
 		<h3>Understand your impact</h3>
-		<p></p>
+		<div class="info_text"><p>Burning fossil fues via combustion produces CO<sub>2</sub>, one of the primary greenhouse gases that contributes to the "Greenhouse Effect". Data below from the Environmental Protection Agency provides a snapshot of CO<sub>2</sub> emissions per mile based on mode of transportation. </p></div>
 	</div>
 </div>
 <div class="row form-group">
@@ -61,9 +61,9 @@
 		</form>
 	</div>
 
-<div class="col-md-4 col-md-offset-1">
-	<canvas id="avgChart" width="400" height="400"></canvas>
-</div>
+	<div class="col-md-5">
+		<canvas id="compareChart" width="400" height="400"></canvas>
+	</div>
 </div>
 
 </div>
