--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,8 @@
 <script src="js/routing.js"></script>
 <script src="js/area_chart.js"></script>
 <script src="js/average_chart.js"></script>
+<script src="js/compare_chart.js"></script>
+
 <script src="js/script.js"></script>
 
 
