--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -1,13 +1,22 @@
-<h1 class="col-md-12">This is the trips page</h1>
-<div class="col-md-12"><h3><%= currentUser.firstname %>'s Commutes</h3></div>
+<div class="background">
+	<div class="text-center row form-group">
+		<div class="col-md-12">
+			<h1><%= currentUser.firstname %>'s Saved Trips</h1>
+		</div>
+	</div>
+</div>
 
 <% if(user.modes.length <= 0) {%>
 	<h2> You haven't added any trips yet</h2>
 <%}%>
 
-<div class="row form-group">
-	<div class="col-lg-6"><canvas id="dough_chart"></canvas></div>
+<div class="row form-group top-row">
+	<div class="col-lg-5 col-lg-offset-1">
+			<div class="trips_header"><h3>Your Trips by Distance (miles)</h3></div>		
+		<canvas id="dough_chart"></canvas></div>
 	<div class="col-lg-5">
+	<div class="trips_header"><h3>Saved Trip Data</h3></div>		
+	<div class="table_class">
 	<table class="table">
 		<thead>
 			<tr>
@@ -31,11 +40,15 @@
 		</tbody>
 	</table>
 	</div>
+	<hr>
+	</div>
 </div>
 <div class="row form-group">
-	<div class="col-lg-8 col-lg-offset-2"><canvas id="area_chart"></canvas></div>
+	<div class="col-lg-8 col-lg-offset-2">
+	<div class="trips_header"><h3>Compare Your Carbon Footprint with Other Transport Modes</h3></div>		
+	<div class="area_text"><p>Visualize your total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
+	<canvas id="area_chart"></canvas></div>
 </div>
-
 
 <script type="text/javascript"> var chartData = <%-JSON.stringify(user)%></script>
 <script type="text/javascript" src="js/dough_chart.js"></script>
