--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,12 +9,12 @@
 <div class="row form-group top-row">
 	<div class="col-md-5 col-md-offset-1">
 	<h3>Track a Trip</h3>
-	<div class="info_text"><p>Carbon Commute lets you see average carbon dioxide emissions per trip traveled based on mode of transport. Simply select transportation mode and trip origin and destination points. Save your trips to track distance and carbon footprint data to date</p></div>
+	<div class="info_text"><p>Carbon Commute lets you see average carbon dioxide emissions per trip traveled based on mode of transport. Simply select transportation mode and trip origin and destination points. Save your trips to track distance and carbon footprint data.</p></div>
 	<div class="button_div"><input id="search_button" type="button" value="Start Tracking" class="btn" onclick="showForm()"></div>	
 	</div>
 	<div class="col-md-5">
-		<h3>Understand your impact</h3>
-		<div class="info_text"><p>Burning fossil fues via combustion produces CO<sub>2</sub>, one of the primary greenhouse gases that contributes to the "Greenhouse Effect". Data below from the Environmental Protection Agency provides a snapshot of CO<sub>2</sub> emissions per mile based on mode of transportation. </p></div>
+		<h3>Understand Your Impact</h3>
+		<div class="info_text"><p>Burning fossil fuels produces CO<sub>2</sub>, one of the primary greenhouse gases that contribute to the "Greenhouse Effect". Data below from the Environmental Protection Agency provides a snapshot of CO<sub>2</sub> emissions per mile based on mode of transportation. </p></div>
 	</div>
 </div>
 <div class="row form-group">
@@ -29,7 +29,7 @@
 					  <option value="" selected="selected">Select</option>
 					  <option value="bicycling">Cycling</option>
 					  <option value="walking">Walking</option>
-					  <option value="driving">Driving</option>
+					  <option value="driving">Car</option>
 					  <option value="truck">Light-Duty Truck</option>
 					  <option value="motorcycle">Motorcycle</option>
 					  <option value="transitrail">Transit Rail</option>
