--- a/views/modes.ejs
+++ b/views/modes.ejs
@@ -72,7 +72,10 @@
 
 </div>
 
-<script type="text/javascript"> var compData = <%-JSON.stringify(map)%></script>
+<script type="text/javascript"> 
+	var compData = <%-JSON.stringify(map)%> 
+	var mode = <%-JSON.stringify(modecurrent)%> 
+</script>
 <script type="text/javascript" src="js/compare_chart.js"></script>
 
 
