--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -45,8 +45,8 @@
 </div>
 <div class="row form-group">
 	<div class="col-lg-8 col-lg-offset-2">
-	<div class="trips_header"><h3>Compare Your Carbon Footprint with Other Transport Modes</h3></div>		
-	<div class="area_text"><p>Visualize your total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
+	<div class="trips_header"><h3>Carbon Footprint Comparison</h3></div>		
+	<div class="area_text"><p>Compare your total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
 	<canvas id="area_chart"></canvas></div>
 </div>
 
