--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,19 +1,19 @@
 <div class="background">
 	<div class="row form-group">
-		<h2>sign in</h2>
+		<h2>Login To Your Account</h2>
 		<div class="col-md-3">
 		</div>
 		<div class="col-md-6 auth_format">
 			<form method="post" action="/auth/login">
 				<div class="form-group">
 					<label class="signin-form">Email:</label>
-					<input type="text" name="email" class="form-control" placeholder="Your email">
+					<input type="text" name="email" class="form-control auth-input" placeholder="Your email">
 				</div>
 				<div class="form-group">
 					<label class="signin-form">Password:</label>
-					<input type="password" name="password" class="form-control" placeholder="Your password">
+					<input type="password" name="password" class="form-control auth-input" placeholder="Your password">
 				</div>
-				<input type="submit" value="sign in" class="auth_submit">
+				<input type="submit" value="Sign In" class="auth_submit">
 			</form>
 		</div>
 		<div class="col-md-3">
@@ -21,5 +21,5 @@
 	</div>
 </div>
 <div class="body-section">
-<h4 class="black_text">need an account? sign up<a class="signup-link" href="/auth/signup"> here</a></h4>
+	<h4 class="black_text">need an account? sign up<a class="signup-link" href="/auth/signup"> here</a></h4>
 </div>
