text edits to modes page

--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -46,7 +46,7 @@
 <div class="row form-group">
 	<div class="col-lg-8 col-lg-offset-2">
 	<div class="trips_header"><h3>Carbon Footprint Comparison</h3></div>		
-	<div class="area_text"><p>Compare your total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
+	<div class="area_text"><p>Compare your actual total carbon emissions for saved trips with emissions for other modes. Emissions for other transport modes based on EPA emissions data and total logged miles.</p></div>  
 	<canvas id="area_chart"></canvas></div>
 </div>
 
